--- a/resources/css/detail_solution_zabbix.css
+++ b/resources/css/detail_solution_zabbix.css
@@ -19,6 +19,7 @@
     justify-content: center;
     padding:64px;
     padding-right:0px;
+    z-index:1;
 }
 
 .content_header_left_text_box h3.banner_title {
@@ -43,6 +44,8 @@
     max-width:780px;
 }
 
+
+.content_section
 
 .content_body_container {
     width: 100%;
@@ -123,7 +126,6 @@
 @media screen and (max-width:1280px){
 
     .content_header_container .content_header_left_container {
-        z-index:50;
         width: 100%;
     }
 
